docs: api 문서 그룹화
